--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -586,3 +586,36 @@ footer{
         font-size: 10px;
     }
 }
+@media(max-width: 425px){
+    section.about .content .right p{
+        font-size: 12px;
+    }
+}
+@media(max-width: 401px){
+    section.about .content .right p{
+        font-size: 10px;
+    }
+    section.profile .right ul li:nth-child(1), section.profile .right ul li:nth-child(2){
+        font-size: 12px;
+    }
+    section.profile .right ul li:nth-child(1) img, section.profile .right ul li:nth-child(2) img{
+        width: 18px;
+        height: 18px;
+    }
+}
+@media(max-width: 401px){
+    section.profile .right ul li:nth-child(1), section.profile .right ul li:nth-child(2){
+        font-size: 10px;
+    }
+    section.profile .right ul li:nth-child(1) img, section.profile .right ul li:nth-child(2) img, section.profile .right ul li:nth-child(3) img, section.profile .right ul li:nth-child(4) img{
+        width: 14px;
+        height: 14px;
+    }
+    
+}
+
+@media(max-width: 386px){
+    section.about .content .right p{
+        font-size: 8px;
+    }
+}
